Building options lead to broken BVH in Cycles #70685

Closed
opened 2019-10-09 22:25:07 +02:00 by Dalai Felinto · 13 comments

System Information
Operating system: Windows-10-10.0.18362 64 Bits
Graphics card: GeForce GTX 960M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.70

Blender Version
Broken: version: 2.81 (sub 14), e846852862
Worked: ?

Short description of error
With my build options set to a minimum (WITH_CYCLES, WITH_BOOST, WITH_CYCLES_NATIVE_ONLY) it builds fine, but I end up with a non-functional Cycles.

Exact steps for others to reproduce the error
Viewport render preview leads to an assert on bvh_traversal.h::BVH_FUNCTION_NAME.

In that function I'm getting kernel_data.bvh.bvh_layout = BVH_LAYOUT_BVH4, but this case is ifdef'ed.

Note: If I go to debug menu, set debug to 256, and manually set BVH Layout to BVH2 things work well.

**System Information** Operating system: Windows-10-10.0.18362 64 Bits Graphics card: GeForce GTX 960M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.70 **Blender Version** Broken: version: 2.81 (sub 14), e84685286274 Worked: ? **Short description of error** With my build options set to a minimum (WITH_CYCLES, WITH_BOOST, WITH_CYCLES_NATIVE_ONLY) it builds fine, but I end up with a non-functional Cycles. **Exact steps for others to reproduce the error** Viewport render preview leads to an assert on bvh_traversal.h::BVH_FUNCTION_NAME. In that function I'm getting kernel_data.bvh.bvh_layout = BVH_LAYOUT_BVH4, but this case is ifdef'ed. **Note:** If I go to debug menu, set debug to 256, and manually set BVH Layout to BVH2 things work well.
Author
Owner

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Member

Added subscriber: @LazyDodo

Added subscriber: @LazyDodo
Member

can't seem to repro with the standard developer profile options,could you share your cmakecache.txt ?

can't seem to repro with the standard developer profile options,could you share your `cmakecache.txt` ?
Author
Owner

CMakeCache.txt:
CMakeCache.txt

CMakeCache.txt: [CMakeCache.txt](https://archive.blender.org/developer/F7799842/CMakeCache.txt)
Member

I matched your build options as close as i could, still nothing.

  1. blender --factory-startup
  2. select cycles as the renderer
  3. z , rendered ,in the viewport

should do it right?

I matched your build options as close as i could, still nothing. 1) blender --factory-startup 2) select cycles as the renderer 3) z , rendered ,in the viewport should do it right?
Author
Owner

Steps are perfect. It goes without saying that It should be a debug build, and asserts should break. But I think even if they don't stop it would print in the windows console.

Steps are perfect. It goes without saying that It should be a debug build, and asserts should break. But I think even if they don't stop it would print in the windows console.

Added subscriber: @Sergey

Added subscriber: @Sergey

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Sergey Sharybin self-assigned this 2019-10-10 13:03:12 +02:00

This means that get_bvh_layout_mask in device_cpu.cpp detected SSE2 support, but somehow __QBVH__ was not defined in the kernel (even though on 64bit platforms we always enabling __KERNEL_SSE2__).

However, this is a report about custom build, which we don't accept in the bug tracker. Bug tracker about issues reproducable with official builds. All the rest is to go via developers communications channels.

This means that `get_bvh_layout_mask` in `device_cpu.cpp` detected SSE2 support, but somehow `__QBVH__` was not defined in the kernel (even though on 64bit platforms we always enabling `__KERNEL_SSE2__`). However, this is a report about custom build, which we don't accept in the bug tracker. Bug tracker about issues reproducable with official builds. All the rest is to go via developers communications channels.
Member

I asked for the ticket on chat, WITH_CYCLES_NATIVE_ONLY is not an option that gets a whole lot of exercise on windows, so if there's a problem with it i'd like to look into it and resolve the issue, that being said i'm unable repro

I asked for the ticket on chat, `WITH_CYCLES_NATIVE_ONLY` is not an option that gets a whole lot of exercise on windows, so if there's a problem with it i'd like to look into it and resolve the issue, that being said i'm unable repro

This issue was referenced by blender/cycles@6624140709

This issue was referenced by blender/cycles@6624140709d20b2f3c5f70af655620c3de947383

This issue was referenced by 9339dc6dd1

This issue was referenced by 9339dc6dd1080730d1cf0e9a3f14d6139b2fda06

Changed status from 'Archived' to: 'Resolved'

Changed status from 'Archived' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#70685
No description provided.