Fix T70685: Cycles crash using WITH_CYCLES_NATIVE_ONLY on Windows

MSVC does not have -march=native, so the kernel gets built without AVX2 and
BVH8 support. The code assumed it to be available and crashed

Differential Revision: https://developer.blender.org/D6082